--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,16 @@
   -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
 }
+@media (max-width: 450px) {
+  .header-container .header-logo a img {
+    width: 50px;
+    height: 50px;
+    margin: 3px;
+    -webkit-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
+  }
+}
 .header-container .header-navegable .navegable-menu {
   display: flex;
   justify-content: space-between;
@@ -52,6 +62,53 @@
   text-shadow: none;
   transition: 1s;
 }
+@media (max-width: 450px) {
+  .header-container .header-navegable .navegable-menu .navegable-item {
+    margin-left: 20px;
+    margin-right: 20px;
+    text-decoration: none;
+    font-family: "Akshar", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
+    font-family: "Playfair Display", serif;
+    font-size: 10px;
+    font-weight: bold;
+    color: #E8E1D9;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px black;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 960px) {
+  .header-container .header-navegable .navegable-menu .navegable-item {
+    margin: 10px;
+    text-decoration: none;
+    font-family: "Akshar", sans-serif;
+    font-family: "Josefin Sans", sans-serif;
+    font-family: "Playfair Display", serif;
+    font-size: 10px;
+    font-weight: bold;
+    color: #E8E1D9;
+    text-transform: uppercase;
+    text-shadow: 2px 2px 2px black;
+  }
+}
+@media (max-width: 450px) {
+  .header-container .header-navegable .navegable-menu {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 90%;
+    height: 75px;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 960px) {
+  .header-container .header-navegable .navegable-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 40%;
+    height: 50px;
+  }
+}
 .header-container .header-sales {
   display: flex;
   justify-content: space-around;
@@ -60,9 +117,59 @@
   align-items: center;
   margin: 20px;
 }
+@media (max-width: 450px) {
+  .header-container .header-sales {
+    display: flex;
+    flex-direction: column;
+    width: 10%;
+    background-color: #E8E1D9;
+    align-items: center;
+    margin: 10px;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 960px) {
+  .header-container .header-sales {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background-color: #E8E1D9;
+  }
+}
 .header-container .header-sales .sales-img {
   width: 40px;
   height: 40px;
+}
+@media (max-width: 450px) {
+  .header-container .header-sales .sales-img {
+    width: 20px;
+    height: 20px;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 960px) {
+  .header-container .header-sales .sales-img {
+    width: 20px;
+    height: 20px;
+  }
+}
+@media (max-width: 450px) {
+  .header-container {
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #125C13;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 960px) {
+  .header-container {
+    height: auto;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    background-color: #125C13;
+  }
 }
 
 /*header end*/
@@ -72,6 +179,13 @@
   display: flex;
   justify-content: space-between;
   background-color: #125C13;
+}
+@media (max-width: 450px) {
+  .footer-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
 }
 .footer-container .footer-navegable .item {
   display: flex;
@@ -110,6 +224,14 @@
   padding: 3px;
   border: solid 2px black;
 }
+@media (max-width: 450px) {
+  .footer-container .footer-redes {
+    display: flex;
+    flex-direction: column;
+    margin-left: 0;
+    border: solid black;
+  }
+}
 .footer-container .footer-redes .img {
   width: 30px;
   height: 30px;
@@ -118,6 +240,12 @@
 }
 .footer-container .footer-map {
   margin-top: 15px;
+}
+@media (max-width: 450px) {
+  .footer-container .footer-map {
+    margin: 0 auto;
+    margin-top: 5px;
+  }
 }
 .footer-container .footer-logo {
   width: 100px;
@@ -128,12 +256,28 @@
   -moz-box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
   box-shadow: 10px 10px 6px 1px rgba(0, 0, 0, 0.75);
 }
+@media (max-width: 450px) {
+  .footer-container .footer-logo {
+    width: 50px;
+    height: 50px;
+  }
+}
 
 .index .carrusel-container {
   width: 100%;
   height: 80vh;
   overflow: hidden;
   object-fit: cover;
+}
+@media (max-width: 450px) {
+  .index .carrusel-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 200px;
+    gap: 10px;
+    background-color: hsla(36deg, 94%, 25%, 0.61);
+    margin: 5px;
+  }
 }
 .index .carrusel-container ul {
   display: flex;
@@ -168,46 +312,86 @@
 .index .carrusel-container ul li a img {
   width: 100%;
 }
+@media (max-width: 450px) {
+  .index .carrusel-container ul li a img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
 .index .article-container {
   width: 100%;
   height: 60vh;
   display: flex;
-  margin: 5px;
   justify-content: center;
   align-items: space-around;
-  background-color: hsla(36deg, 94%, 25%, 0.61);
+  border: black 5px solid;
+}
+@media (max-width: 450px) {
+  .index .article-container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin: 5px;
+    flex: column;
+    background-color: hsla(36deg, 94%, 25%, 0.61);
+  }
+}
+.index .article-container h2 {
+  font-size: 30px;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  text-align: center;
+  color: #E8E1D9;
+  margin-bottom: 10px;
+}
+@media (max-width: 450px) {
+  .index .article-container h2 {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-family: "Oswald", sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
+    text-align: center;
+    color: #E8E1D9;
+    margin-bottom: 10px;
+  }
+}
+.index .article-container p {
+  color: #E8E1D9;
+  font-weight: bold;
 }
 .index .article-container .aflorales {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  margin: 5px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/index/arreglof.png);
 }
 .index .article-container .lombriz {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  margin: 5px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/index/lombriz.png);
 }
 .index .article-container .martin {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 5px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  margin: 5px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/index/hombre3.png);
 }
 
@@ -217,6 +401,15 @@
   grid-auto-rows: auto;
   gap: 15px;
   margin: 5px;
+}
+@media (max-width: 450px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
+    gap: 10px;
+    margin: 5px;
+  }
 }
 .grid-container .grid-producto {
   position: relative;
@@ -232,6 +425,11 @@
   font-family: "Playfair Display", serif;
   margin-left: 3px;
 }
+@media (max-width: 450px) {
+  .grid-container .grid-producto .grid-texto {
+    font-size: 10px;
+  }
+}
 .grid-container .grid-producto .grid-foto {
   width: 100%;
   height: 100%;
@@ -240,52 +438,28 @@
   -moz-box-shadow: 11px 17px 14px -4px rgba(0, 0, 0, 0.75);
   box-shadow: 11px 17px 14px -4px rgba(0, 0, 0, 0.75);
 }
+@media (max-width: 450px) {
+  .grid-container .grid-producto .grid-foto {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    -webkit-box-shadow: 11px 17px 14px -4px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 11px 17px 14px -4px rgba(0, 0, 0, 0.75);
+    box-shadow: 11px 17px 14px -4px rgba(0, 0, 0, 0.75);
+  }
+}
 
 .workshop-container {
   height: 80vh;
   width: 100%;
 }
-.workshop-container .container-item {
-  display: flex;
-  align-items: center;
-  background-color: rgba(62, 124, 23, 0.5137254902);
-}
-.workshop-container .container-item .workshop-item {
-  flex-direction: column;
-  width: 50%;
-}
-.workshop-container .container-item .workshop-item .workshop-title {
-  font-family: "Playfair Display", serif;
-  font-family: "Poppins", sans-serif;
-  font-size: 30px;
-  text-transform: uppercase;
-  text-align: center;
-  background-color: #F4A442;
-  margin-left: 40px;
-  padding: 10px;
-  border-radius: 15px;
-}
-.workshop-container .container-item .workshop-item .workshop-text {
-  font-family: "Playfair Display", serif;
-  font-size: 15px;
-  line-height: 1.5;
-  margin-top: 20px;
-  margin-left: 40px;
-  font-weight: bold;
-  text-align: center;
-}
 .workshop-container .container-itemtwo {
-  display: flex;
   flex-direction: row-reverse;
   align-items: center;
   justify-content: space-between;
-  background-color: rgba(62, 124, 23, 0.5137254902);
+  margin-left: 10px;
 }
-.workshop-container .container-itemtwo .workshop-item {
-  flex-direction: column;
-  width: 50%;
-}
-.workshop-container .container-itemtwo .workshop-item .workshop-text2 {
+.workshop-container .container-itemtwo div .workshop-text2 {
   font-family: "Playfair Display", serif;
   font-size: 15px;
   line-height: 1.5;
@@ -293,7 +467,7 @@
   margin-top: 20px;
   text-align: center;
 }
-.workshop-container .container-itemtwo .workshop-item .workshop-title2 {
+.workshop-container .container-itemtwo div .workshop-title2 {
   font-family: "Playfair Display", serif;
   font-family: "Poppins", sans-serif;
   font-size: 30px;
@@ -303,6 +477,40 @@
   margin-left: 20px;
   padding: 10px;
   border-radius: 15px;
+}
+.workshop-container .container-itemtwo div .workshop-item {
+  flex-direction: column;
+  width: 50%;
+}
+.workshop-container .container-item {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  background-color: rgba(62, 124, 23, 0.5137254902);
+}
+.workshop-container .container-item div p {
+  font-family: "Playfair Display", serif;
+  font-size: 15px;
+  line-height: 1.5;
+  margin-top: 20px;
+  margin-left: 40px;
+  font-weight: bold;
+  text-align: center;
+}
+.workshop-container .container-item div h2 {
+  font-family: "Playfair Display", serif;
+  font-family: "Poppins", sans-serif;
+  font-size: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  background-color: #F4A442;
+  margin-left: 40px;
+  padding: 10px;
+  border-radius: 15px;
+}
+.workshop-container .container-item div .workshop-item {
+  flex-direction: column;
+  width: 50%;
 }
 
 .jardin-container {
