--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,6 +5,12 @@
     display: flex;
     justify-content: space-between;
     background-color: #125C13;
+    @media  (max-width:450px){
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
         .footer-navegable{
             .item{
                 display: flex;
@@ -43,15 +49,26 @@
             margin-bottom: 5px;
             padding: 3px;
             border: solid 2px black;
+            @media  (max-width:450px){
+                display: flex;
+                flex-direction: column;
+                margin-left: 0;
+                border: solid  black; 
+            }
+
             .img{
                 width: 30px;
                 height: 30px;
                 margin: 5px;
-                border: solid 2px black; 
+                border: solid 2px black;
             }
         }        
         .footer-map{
-            margin-top: 15px; 
+            margin-top: 15px;
+            @media  (max-width:450px){
+                margin: 0 auto;
+                margin-top: 5px;    
+            }
         }        
         .footer-logo{
             width: 100px;
@@ -61,6 +78,11 @@
             -webkit-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
             -moz-box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);
             box-shadow: 10px 10px 6px 1px rgba(0,0,0,0.75);   
+            @media  (max-width:450px){
+                width: 50px;
+                height: 50px;    
+            }
+
         }
 }
 //footer end
