--- a/scss/sections/_index.scss
+++ b/scss/sections/_index.scss
@@ -5,7 +5,15 @@
         height: 80vh;
         overflow: hidden;
         object-fit: cover;
-        
+        @media  (max-width:450px){
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-auto-rows: 200px;
+            gap: 10px;
+            background-color: hsla(36, 94%, 25%, 0.61);
+            margin: 5px;
+        }
+
         ul{
             display: flex;
             padding: 0;
@@ -27,6 +35,11 @@
                 a{
                     img{
                         width:100%;
+                        @media  (max-width:450px){
+                            width:100%;
+                            height:100%;
+                            object-fit: cover;
+                        }
                     }
                 }
             }
@@ -37,41 +50,70 @@
         width: 100%;
         height: 60vh;
         display: flex;
-        margin:5px;
         justify-content: center;
         align-items: space-around;
-        background-color: hsla(36, 94%, 25%, 0.61);
+        border: black 5px solid;
+        @media  (max-width:450px){
+            width: 100%;
+            height: auto;
+            display: flex;
+            margin:5px;
+            flex: column;
+            background-color: hsla(36, 94%, 25%, 0.61);
+        }
+        h2{
+            font-size: 30px;
+            text-transform: uppercase;
+            font-family: 'Oswald', sans-serif;
+            font-family: 'Roboto Condensed', sans-serif;
+            text-align: center;
+            color:#E8E1D9;
+            margin-bottom: 10px;
+            @media  (max-width:450px){
+                font-size: 20px;
+                text-transform: uppercase;
+                font-family: 'Oswald', sans-serif;
+                font-family: 'Roboto Condensed', sans-serif;
+                text-align: center;
+                color:#E8E1D9;
+                margin-bottom: 10px;    
+            }
+        }
+        p{  
+            color: #E8E1D9;
+            font-weight: bold;
+        }
         .aflorales{
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
+            margin: 5px;
             background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/arreglof.png);
         }
         .lombriz{
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
+            margin: 5px;
             background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/lombriz.png);
         }
         .martin{
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            margin: 5px;
             display: flex;
             justify-content: center;
             flex-direction: column;
             text-align: center;
+            margin: 5px;
             background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url(../images/index/hombre3.png);
         }
 
