--- a/scss/sections/_productos.scss
+++ b/scss/sections/_productos.scss
@@ -5,8 +5,17 @@
     grid-auto-rows: auto;
     gap: 15px;
     margin:5px;
+    @media  (max-width:450px){
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        gap: 10px;
+        margin:5px;
+    }
+    
     .grid-producto{
         position: relative;
+        
         .grid-texto{
             bottom: 0;
             position: absolute;
@@ -17,8 +26,21 @@
             font-family: 'Josefin Sans', sans-serif;
             font-family: 'Playfair Display', serif;
             margin-left: 3px;
+            @media  (max-width:450px){
+                font-size: 10px;
+            }
+
         }
         .grid-foto{
+            @media  (max-width:450px){
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                -webkit-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+                -moz-box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+                box-shadow: 11px 17px 14px -4px rgba(0,0,0,0.75);
+            }
+
             width: 100%;
             height: 100%;
             object-fit: cover;
